--- a/src/styles/config.scss
+++ b/src/styles/config.scss
@@ -3,3 +3,7 @@ $navMenu: 250px;
 //主颜色
 $mainColor: #f56c6c;
 $layoutHeader: 75px;
+@mixin webkit($type, $value) {
+  -webkit-#{$type}: $value;
+  #{$type}: $value;
+}
