--- a/src/styles/config.scss
+++ b/src/styles/config.scss
@@ -7,3 +7,24 @@ $layoutHeader: 75px;
   -webkit-#{$type}: $value;
   #{$type}: $value;
 }
+
+.close {
+  .el-submenu {
+    &.is-opened {
+      > .el-submenu__title {
+        background: $mainColor !important;
+      }
+    }
+  }
+}
+.el-menu--vertical {
+  .el-menu {
+    background: $mainColor !important;
+  }
+  .el-menu-item {
+    line-height: 56px;
+    &:hover {
+      background: $mainColor !important;
+    }
+  }
+}
