--- a/src/styles/elementui.scss
+++ b/src/styles/elementui.scss
@@ -11,3 +11,15 @@
     background: $mainColor !important;
   }
 }
+/**table*/
+.el-table {
+  td,
+  th {
+    text-align: center;
+    color: #344a5f;
+  }
+  td {
+    font-weight: blod;
+    font-size: 14px;
+  }
+}
