--- a/src/styles/elementui.scss
+++ b/src/styles/elementui.scss
@@ -23,3 +23,21 @@
     font-size: 14px;
   }
 }
+//dialog样式
+.el-dialog__body {
+  padding: 30px 47px !important;
+}
+.el-dialog__footer {
+  text-align: center !important;
+  padding-bottom: 50px;
+  .el-button {
+    width: 150px !important;
+    margin: 0 20px;
+  }
+}
+//form 样式
+.el-form {
+  .el-form-item:last-child {
+    margin-bottom: 0 !important;
+  }
+}
